<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <!-- Tombol Browser (Implicit Intent) -->
    <Button
        android:id="@+id/button_browser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#3DCE0C"
        android:text="@string/button_label_browser" />

    <!-- Tombol Kontak -->
    <Button
        android:id="@+id/button_contact"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#FF9800"
        android:text="@string/button_label_contact" />

    <!-- Tombol Maps -->
    <Button
        android:id="@+id/button_maps"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#9C27B0"
        android:text="Buka Lokasi" />

    <!-- Tombol Telepon -->
    <Button
        android:id="@+id/button_call"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#E91E63"
        android:text="Panggil Nomor" />

    <!-- Tombol Toast -->
    <Button
        android:id="@+id/button_toast"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#2196F3"
        android:text="@string/button_label_toast"
        app:cornerRadius="20dp" />

    <!-- TextView Counter -->
    <TextView
        android:id="@+id/show_count"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:background="#FFFF00"
        android:gravity="center"
        android:text="@string/count_initial_value"
        android:textSize="160sp" />

    <!-- Tombol Count -->
    <Button
        android:id="@+id/button_count"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#2196F3"
        android:text="@string/button_label_count"
        app:cornerRadius="20dp" />

    <!-- Tombol Pindah Halaman -->
    <Button
        android:id="@+id/button_switchpage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#2196F3"
        android:text="@string/button_label_pindah"
        app:cornerRadius="20dp" />

</LinearLayout>
